--- a/buttons.html
+++ b/buttons.html
@@ -3,9 +3,16 @@
     background-color:rgb(200, 0, 0);
     color:white;
     border:none;
-    height:36px;
-    width:105px;
+    border-radius: 2px; 
     cursor: pointer;
+    margin-right: 8px;
+    margin-left:20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 16px;
+    padding-right: 16px;
+    transition: opacity 0.15s;
+    vertical-align: top;
   } 
 
 
@@ -19,19 +26,28 @@
 
   .join-button {
     background-color:white;
-    border-color:rgb(135, 135, 241);
+    border-color:rgb(6, 95, 212);
     border-style:solid;
     border-width:1px;
-    color:blue;
+    color:blue;                    
     height:36px;
     width:62px;
     border-radius:2px;
     cursor:pointer;
-    transition:background-color 1s
+    padding-top: 9px;
+    padding-bottom: 9px;
+    padding-left: 16px;
+    padding-right: 16px;
+    
+
+
+    transition:background-color 0.15s,
+     color is 0.15s;
+
   }
 
   .join-button:hover {
-    background-color: rgb(61, 185, 30);
+    background-color: rgb(6, 95, 212);
     color:white;
   }
 
@@ -40,23 +56,32 @@
   } */
 
   .tweet-button {
-    background-color: rgb(2, 138, 255);
+    background-color: rgb(29, 155, 240);
     color: white;
     border: none;
     height: 36px;
     width: 74px;
-    border-radius: radius 18px;
+    border-radius: 18px;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 15px;
     cursor: pointer;
     margin-left: 8px;
+    transition: box-shadow 0.15s;
+    vertical-align: top;
   }
+
+  .tweet-button:hover {
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
+  }
+  
+   
 </style>
 
 <button class="subscribe-button">SUBSCRIBE
-
+  
 </button>
-<button class="join-button">JOIN
+<button class="join-button">
+  JOIN
 
 </button> 
 
