--- a/text.html
+++ b/text.html
@@ -1,10 +1,51 @@
 <style>
+  p {
+    font-family:Arial;
+  }
+  
   .video-title {
-    font-family: Arial;
-    font-size: 30px;
     font-weight: bold;
+    font-size: 18px;
+    width: 280px;
+    line-height: 24px;
+    margin-bottom:5;
+  }
+
+  .video-stats{
+    font-size: 14px;
+    color: rgb(96, 96, 96,);
+    margin-top:0;
+    margin-bottom: 18;
+  }
+
+  .video-author {
+    color:rgb(96, 96, 96,);
+    font-size: 14px;
+    margin-top: 0;
+    margin-bottom: 20;
+  }
+
+  .video-description{
+    font-size: 14px;
+    color:rgb(96, 96, 96,);
+    width: 280px;
+    line-height: 22px;
+    margin-top: 0;
   }
 </style>
-<p>
+
+<p class="video-title">
   Talking Tech and AI with Google CEO Sunder Pichai!
+</p>
+
+<p class="video-stats">
+  3.4M views &#183; 6 months ago 
+</p>
+
+<p class="video-author">
+Marques Brownlee &#10003;
+</p>
+
+<p class="video-description">
+  Talking tech and AI on the heels of Google I/O. Also a daily driver phone reveal from Google's CEO. Shoutout to Sundar!
 </p>
